<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mcshivpuri.shivpurimunicipalcouncil.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/nager_nigam_shivpuri"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/community_hall_booking"
        android:id="@+id/button_hall"
        android:layout_gravity="center_horizontal"
        style="@style/button_mainactivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complaint"
        android:id="@+id/button_complaint"
        android:layout_gravity="center_horizontal"
        style="@style/button_mainactivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanker_booking"
        android:id="@+id/button_tanker"
        android:layout_gravity="center_horizontal"
        style="@style/button_mainactivity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/residents"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="#212121"
        android:textStyle="bold"

        android:linksClickable="false"
        android:gravity="center_vertical|center"
        android:maxLines="10"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nager_palika_adhikari"
            android:id="@+id/textView3"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textColor="#212121"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nager_palika_nigam"
            android:id="@+id/textView4"
            android:layout_centerVertical="true"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"



             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/adhyaksha"
            android:id="@+id/textView5"
            android:layout_alignParentRight="true"

            android:gravity="left|center_vertical"
            android:textColor="#212121"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nager_palika_nigam"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_more_info_click_here"
        android:id="@+id/webcall"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:textColor="#1A237E"
        android:layout_marginTop="20dp"

        />

</LinearLayout>

