<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/tankerbookingLayout"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mcshivpuri.shivpurimunicipalcouncil.TankerBooking"
    tools:showIn="@layout/activity_tanker_booking">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/shivpuri_logo"
                android:scaleType="fitCenter"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                   style="@style/style_edit_text"
                    android:hint="@string/name"
                    android:id="@+id/edit_text_name_tanker"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                   style="@style/style_edit_text"
                    android:hint="@string/add1"
                    android:id="@+id/edit_text_add1_tankerbooking"
                    />
            </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
            <EditText
                style="@style/style_edit_text"
                android:hint="@string/add2"
                android:id="@+id/edit_text_add2_tanker"/>
           </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="#212121"
                    android:text="@string/ward"
                    android:layout_weight="0.5"
                    android:textSize="17sp"
                    android:gravity="center" />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/spinner_ward_tanker"
                    />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/style_edit_text"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:id="@+id/edit_text_mobile_tanker"
                     />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                   style="@style/style_edit_text"
                    android:hint="@string/email"
                    android:id="@+id/edit_text_email_tanker"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                   style="@style/style_edit_text"
                    android:hint="@string/preferred_data"
                    android:id="@+id/edit_text_date_tanker"
                    android:inputType="date"
                    android:focusableInTouchMode="false" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/style_edit_text"
                    android:hint="@string/preferred_time"
                    android:id="@+id/edit_text_time_tanker"
                    android:inputType="time"
                    android:focusableInTouchMode="false" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:text="@string/taker_type"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="#212121" />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_type_of_tanker"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
               <android.support.design.widget.TextInputLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1">
                   <EditText
                       style="@style/style_edit_text"
                       android:inputType="number"
                       android:id="@+id/no_of_tanker"
                       android:hint="@string/no_of_tanker"/>


               </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="*"
                    android:textColor="#212121"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/text_view_tankerType" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/total_amount"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:textColor="#212121"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:textColor="#212121"
                    android:visibility="gone"
                    android:id="@+id/text_view_totalAmount"
                    />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                  style="@style/style_edit_text"
                    android:inputType="textMultiLine"
                    android:hint="@string/reason"
                    android:id="@+id/edit_text_reason_tanker"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanker_avaliable"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/justice_at_shivpuri"
                android:layout_marginTop="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condition_tanker"
                android:layout_marginTop="10dp"
                android:id="@+id/checkbox_tanker_condition"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:layout_weight="1"
                    android:text="@string/submit"
                    android:id="@+id/submit_button_tanker"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:layout_weight="1"
                    android:text="@string/Reset"
                    android:id="@+id/reset_button_tanker" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
