<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mcshivpuri.shivpurimunicipalcouncil.Complaint"
    tools:showIn="@layout/activity_complaint">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/imageView3"
            android:src="@drawable/newshivpuriheade"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/complaint_image_button"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/photocamera"
            android:scaleType="centerInside"
            android:contentDescription="camera button"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"

            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/complainant_type"
                style="@style/text_view"
                android:gravity="left"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/spinner_complaint_registration"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"

            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/complaint_category"
                style="@style/text_view"
                android:layout_gravity="left"
                android:gravity="left"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/spinner_complaint_category"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ward"
                style="@style/text_view"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/spinner_ward"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="@string/location"
                android:layout_marginTop="10dp"
                android:inputType="text|textMultiLine"
                android:nestedScrollingEnabled="true"
                android:textAlignment="gravity"
                android:textStyle="normal"
                android:id="@+id/edit_text_location_complaint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="@string/describe_complaint"
                android:layout_marginTop="10dp"
                android:inputType="text|textMultiLine"
                android:id="@+id/edit_text_describe_complaint"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_view"
            android:text="@string/personal_info"
            android:layout_marginTop="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <EditText
                style="@style/style_edit_text"
                android:hint="@string/first_name"
                android:inputType="text"
                android:id="@+id/edit_text_first_name_complaint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                style="@style/style_edit_text"
                android:hint="@string/last_name"
                android:inputType="text"
                android:id="@+id/edit_text_last_name_complaint"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                style="@style/style_edit_text"
                android:hint="@string/add1"
                android:id="@+id/edit_text_add1_complaint"
                android:inputType="textMultiLine"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
               style="@style/style_edit_text"
                android:hint="@string/add2"
                android:id="@+id/edit_text_add2_complaint"
                android:inputType="textMultiLine"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                style="@style/style_edit_text"
                android:hint="@string/area"
                android:id="@+id/edit_text_area"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
               style="@style/style_edit_text"
                android:hint="@string/mobile_no"
                android:id="@+id/edit_text_phone"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
               style="@style/style_edit_text"
                android:hint="@string/email"
                android:id="@+id/edit_text_email_complaint"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_view"
            android:text="@string/pl_notify_string"
            />

       <RadioGroup
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <RadioButton
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/email"/>
           <RadioButton
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/do_not_notify"/>
       </RadioGroup>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/mybutton"
             android:text="@string/submit"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
             />
         <Button
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/mybutton"
             android:text="@string/Reset"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"/>

     </LinearLayout>


    </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
